Theatre testing (#4)
* Add theatre create tests

* Add pagination to theater get endpoint

* Sort support

* Theater show endpoint

* Add theater update tests

* Add theater delete tests

* Ensure stable tests

* Update dependencies
