# api/api.go
@@ -35,9 +35,10 @@ func Register(router *gin.Engine, db *gorm.DB, trans ut.Translator) {
 	// Theaters
 	theaters := v1.Group("/theaters")
 	theaters.GET("", TheatersList)
+	theaters.GET("/:id", TheatersShow)
 	theaters.POST("", TheatersCreate)
-	theaters.PUT("/:uuid", TheatersUpdate)
-	theaters.DELETE("/:uuid", TheatersDelete)
+	theaters.PUT("/:id", TheatersUpdate)
+	theaters.DELETE("/:id", TheatersDelete)
 
 }
 
