# api/docs/swagger.yaml
@@ -1,16 +1,5 @@
 basePath: /api/v1
 definitions:
-  api.HttpError:
-    properties:
-      code:
-        type: integer
-      fields:
-        additionalProperties:
-          type: string
-        type: object
-      message:
-        type: string
-    type: object
   api.TheaterRequest:
     properties:
       name:
@@ -23,11 +12,22 @@ definitions:
     properties:
       created_at:
         type: string
+      id:
+        type: string
       name:
         type: string
       updated_at:
         type: string
-      uuid:
+    type: object
+  middleware.HttpError:
+    properties:
+      code:
+        type: integer
+      fields:
+        additionalProperties:
+          type: string
+        type: object
+      message:
         type: string
     type: object
 host: localhost:8080
@@ -43,6 +43,21 @@ paths:
       - application/json
       description: List theaters
       operationId: TheatersList
+      parameters:
+      - default: 10
+        description: Limit the number of responses
+        in: query
+        name: limit
+        type: integer
+      - default: 0
+        description: Offset the first response
+        in: query
+        name: offset
+        type: integer
+      - description: Sort results
+        in: query
+        name: sort
+        type: string
       produces:
       - application/json
       responses:
@@ -55,15 +70,15 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/api.HttpError'
+            $ref: '#/definitions/middleware.HttpError'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/api.HttpError'
+            $ref: '#/definitions/middleware.HttpError'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/api.HttpError'
+            $ref: '#/definitions/middleware.HttpError'
       summary: List theaters
       tags:
       - theaters
@@ -89,29 +104,29 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/api.HttpError'
+            $ref: '#/definitions/middleware.HttpError'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/api.HttpError'
+            $ref: '#/definitions/middleware.HttpError'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/api.HttpError'
+            $ref: '#/definitions/middleware.HttpError'
       summary: Create theater
       tags:
       - theaters
-  /theaters/{uuid}:
+  /theaters/{id}:
     delete:
       consumes:
       - application/json
       description: Delete theater
       operationId: TheatersDelete
       parameters:
-      - description: Theater UUID
+      - description: Theater ID
         format: uuid
         in: path
-        name: uuid
+        name: id
         required: true
         type: string
       produces:
@@ -122,16 +137,50 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/api.HttpError'
+            $ref: '#/definitions/middleware.HttpError'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/api.HttpError'
+            $ref: '#/definitions/middleware.HttpError'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/api.HttpError'
+            $ref: '#/definitions/middleware.HttpError'
       summary: Delete theater
+      tags:
+      - theaters
+    get:
+      consumes:
+      - application/json
+      description: Show theater
+      operationId: TheatersShow
+      parameters:
+      - description: Theater ID
+        format: uuid
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.TheaterResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/middleware.HttpError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/middleware.HttpError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/middleware.HttpError'
+      summary: Show theater
       tags:
       - theaters
     put:
@@ -140,10 +189,10 @@ paths:
       description: Update theater
       operationId: TheatersUpdate
       parameters:
-      - description: Theater UUID
+      - description: Theater ID
         format: uuid
         in: path
-        name: uuid
+        name: id
         required: true
         type: string
       - description: request body
@@ -162,15 +211,15 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/api.HttpError'
+            $ref: '#/definitions/middleware.HttpError'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/api.HttpError'
+            $ref: '#/definitions/middleware.HttpError'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/api.HttpError'
+            $ref: '#/definitions/middleware.HttpError'
       summary: Update theater
       tags:
       - theaters
